# serializer version: 1
# name: test_[0 1 2--0 0 0]
  'JFSJHIZ'
# ---
# name: test_[0 1 2--0 0 1]
  'GDJMXDL'
# ---
# name: test_[0 1 2--0 0 2]
  'QBZIFDI'
# ---
# name: test_[0 1 2--0 1 0]
  'UJOUVJN'
# ---
# name: test_[0 1 2--0 1 1]
  'UERNCWC'
# ---
# name: test_[0 1 2--0 1 2]
  'EYBZWBE'
# ---
# name: test_[0 1 2--0 2 0]
  'XMSTMUV'
# ---
# name: test_[0 1 2--0 2 1]
  'TCPYGRO'
# ---
# name: test_[0 1 2--0 2 2]
  'EIGRWTN'
# ---
# name: test_[0 1 2--1 0 0]
  'FSJHIVJ'
# ---
# name: test_[0 1 2--1 0 1]
  'DJMXDUQ'
# ---
# name: test_[0 1 2--1 0 2]
  'BZIFDBG'
# ---
# name: test_[0 1 2--1 1 0]
  'JOUVJDY'
# ---
# name: test_[0 1 2--1 1 1]
  'ERNCWYP'
# ---
# name: test_[0 1 2--1 1 2]
  'YBZWBZP'
# ---
# name: test_[0 1 2--1 2 0]
  'MSTMUIZ'
# ---
# name: test_[0 1 2--1 2 1]
  'CPYGRRA'
# ---
# name: test_[0 1 2--1 2 2]
  'IGRWTRF'
# ---
# name: test_[0 1 2--2 0 0]
  'SJHIVRO'
# ---
# name: test_[0 1 2--2 0 1]
  'JMXDURV'
# ---
# name: test_[0 1 2--2 0 2]
  'ZIFDBZE'
# ---
# name: test_[0 1 2--2 1 0]
  'OUVJDFA'
# ---
# name: test_[0 1 2--2 1 1]
  'RNCWYLJ'
# ---
# name: test_[0 1 2--2 1 2]
  'BZWBZIZ'
# ---
# name: test_[0 1 2--2 2 0]
  'STMUIRB'
# ---
# name: test_[0 1 2--2 2 1]
  'PYGRRHR'
# ---
# name: test_[0 1 2--2 2 2]
  'GRWTRDI'
# ---
# name: test_[0 1 2-AI JK-0 0 0]
  'JZGBZIZ'
# ---
# name: test_[0 1 2-AI JK-0 0 1]
  'FKHZRML'
# ---
# name: test_[0 1 2-AI JK-0 0 2]
  'FDUILKA'
# ---
# name: test_[0 1 2-AI JK-0 1 0]
  'PFZSDON'
# ---
# name: test_[0 1 2-AI JK-0 1 1]
  'NKHKHDC'
# ---
# name: test_[0 1 2-AI JK-0 1 2]
  'TJLGQFE'
# ---
# name: test_[0 1 2-AI JK-0 2 0]
  'LOQFRWV'
# ---
# name: test_[0 1 2-AI JK-0 2 1]
  'LPCFOPO'
# ---
# name: test_[0 1 2-AI JK-0 2 2]
  'CIFPJON'
# ---
# name: test_[0 1 2-AI JK-1 0 0]
  'ZGBZIJK'
# ---
# name: test_[0 1 2-AI JK-1 0 1]
  'KHZRMRQ'
# ---
# name: test_[0 1 2-AI JK-1 0 2]
  'DUILKHG'
# ---
# name: test_[0 1 2-AI JK-1 1 0]
  'FZSDOZY'
# ---
# name: test_[0 1 2-AI JK-1 1 1]
  'KHKHDQP'
# ---
# name: test_[0 1 2-AI JK-1 1 2]
  'JLGQFQP'
# ---
# name: test_[0 1 2-AI JK-1 2 0]
  'OQFRWIZ'
# ---
# name: test_[0 1 2-AI JK-1 2 1]
  'PCFOPBI'
# ---
# name: test_[0 1 2-AI JK-1 2 2]
  'IFPJOGF'
# ---
# name: test_[0 1 2-AI JK-2 0 0]
  'GBZIJPO'
# ---
# name: test_[0 1 2-AI JK-2 0 1]
  'HZRMRWV'
# ---
# name: test_[0 1 2-AI JK-2 0 2]
  'UILKHFE'
# ---
# name: test_[0 1 2-AI JK-2 1 0]
  'ZSDOZBI'
# ---
# name: test_[0 1 2-AI JK-2 1 1]
  'HKHDQJK'
# ---
# name: test_[0 1 2-AI JK-2 1 2]
  'LGQFQIZ'
# ---
# name: test_[0 1 2-AI JK-2 2 0]
  'QFRWICB'
# ---
# name: test_[0 1 2-AI JK-2 2 1]
  'CFOPBSR'
# ---
# name: test_[0 1 2-AI JK-2 2 2]
  'FPJOGKA'
# ---
# name: test_[0 1 2-AI PU BM-0 0 0]
  'KZGMZIZ'
# ---
# name: test_[0 1 2-AI PU BM-0 0 1]
  'FJHZRBL'
# ---
# name: test_[0 1 2-AI PU BM-0 0 2]
  'FDPILJA'
# ---
# name: test_[0 1 2-AI PU BM-0 1 0]
  'UFZSDON'
# ---
# name: test_[0 1 2-AI PU BM-0 1 1]
  'NJHJHDC'
# ---
# name: test_[0 1 2-AI PU BM-0 1 2]
  'TKLGQFE'
# ---
# name: test_[0 1 2-AI PU BM-0 2 0]
  'LOQFRWV'
# ---
# name: test_[0 1 2-AI PU BM-0 2 1]
  'LUCFOUO'
# ---
# name: test_[0 1 2-AI PU BM-0 2 2]
  'CIFUKON'
# ---
# name: test_[0 1 2-AI PU BM-1 0 0]
  'ZGMZIKJ'
# ---
# name: test_[0 1 2-AI PU BM-1 0 1]
  'JHZRBRQ'
# ---
# name: test_[0 1 2-AI PU BM-1 0 2]
  'DPILJHG'
# ---
# name: test_[0 1 2-AI PU BM-1 1 0]
  'FZSDOZY'
# ---
# name: test_[0 1 2-AI PU BM-1 1 1]
  'JHJHDQU'
# ---
# name: test_[0 1 2-AI PU BM-1 1 2]
  'KLGQFQU'
# ---
# name: test_[0 1 2-AI PU BM-1 2 0]
  'OQFRWIZ'
# ---
# name: test_[0 1 2-AI PU BM-1 2 1]
  'UCFOUMI'
# ---
# name: test_[0 1 2-AI PU BM-1 2 2]
  'IFUKOGF'
# ---
# name: test_[0 1 2-AI PU BM-2 0 0]
  'GMZIKUO'
# ---
# name: test_[0 1 2-AI PU BM-2 0 1]
  'HZRBRWV'
# ---
# name: test_[0 1 2-AI PU BM-2 0 2]
  'PILJHFE'
# ---
# name: test_[0 1 2-AI PU BM-2 1 0]
  'ZSDOZMI'
# ---
# name: test_[0 1 2-AI PU BM-2 1 1]
  'HJHDQKJ'
# ---
# name: test_[0 1 2-AI PU BM-2 1 2]
  'LGQFQIZ'
# ---
# name: test_[0 1 2-AI PU BM-2 2 0]
  'QFRWICM'
# ---
# name: test_[0 1 2-AI PU BM-2 2 1]
  'CFOUMSR'
# ---
# name: test_[0 1 2-AI PU BM-2 2 2]
  'FUKOGJA'
# ---
# name: test_[0 1 2-AI-0 0 0]
  'KZGBZIZ'
# ---
# name: test_[0 1 2-AI-0 0 1]
  'FJHZRML'
# ---
# name: test_[0 1 2-AI-0 0 2]
  'FDUILJA'
# ---
# name: test_[0 1 2-AI-0 1 0]
  'PFZSDON'
# ---
# name: test_[0 1 2-AI-0 1 1]
  'NJHJHDC'
# ---
# name: test_[0 1 2-AI-0 1 2]
  'TKLGQFE'
# ---
# name: test_[0 1 2-AI-0 2 0]
  'LOQFRWV'
# ---
# name: test_[0 1 2-AI-0 2 1]
  'LPCFOPO'
# ---
# name: test_[0 1 2-AI-0 2 2]
  'CIFPKON'
# ---
# name: test_[0 1 2-AI-1 0 0]
  'ZGBZIKJ'
# ---
# name: test_[0 1 2-AI-1 0 1]
  'JHZRMRQ'
# ---
# name: test_[0 1 2-AI-1 0 2]
  'DUILJHG'
# ---
# name: test_[0 1 2-AI-1 1 0]
  'FZSDOZY'
# ---
# name: test_[0 1 2-AI-1 1 1]
  'JHJHDQP'
# ---
# name: test_[0 1 2-AI-1 1 2]
  'KLGQFQP'
# ---
# name: test_[0 1 2-AI-1 2 0]
  'OQFRWIZ'
# ---
# name: test_[0 1 2-AI-1 2 1]
  'PCFOPBI'
# ---
# name: test_[0 1 2-AI-1 2 2]
  'IFPKOGF'
# ---
# name: test_[0 1 2-AI-2 0 0]
  'GBZIKPO'
# ---
# name: test_[0 1 2-AI-2 0 1]
  'HZRMRWV'
# ---
# name: test_[0 1 2-AI-2 0 2]
  'UILJHFE'
# ---
# name: test_[0 1 2-AI-2 1 0]
  'ZSDOZBI'
# ---
# name: test_[0 1 2-AI-2 1 1]
  'HJHDQKJ'
# ---
# name: test_[0 1 2-AI-2 1 2]
  'LGQFQIZ'
# ---
# name: test_[0 1 2-AI-2 2 0]
  'QFRWICB'
# ---
# name: test_[0 1 2-AI-2 2 1]
  'CFOPBSR'
# ---
# name: test_[0 1 2-AI-2 2 2]
  'FPKOGJA'
# ---
# name: test_[0 1 2-JK-0 0 0]
  'KFSKHIZ'
# ---
# name: test_[0 1 2-JK-0 0 1]
  'GDKMXDL'
# ---
# name: test_[0 1 2-JK-0 0 2]
  'QBZIFDI'
# ---
# name: test_[0 1 2-JK-0 1 0]
  'UKOUVKN'
# ---
# name: test_[0 1 2-JK-0 1 1]
  'UERNCWC'
# ---
# name: test_[0 1 2-JK-0 1 2]
  'EYBZWBE'
# ---
# name: test_[0 1 2-JK-0 2 0]
  'XMSTMUV'
# ---
# name: test_[0 1 2-JK-0 2 1]
  'TCPYGRO'
# ---
# name: test_[0 1 2-JK-0 2 2]
  'EIGRWTN'
# ---
# name: test_[0 1 2-JK-1 0 0]
  'FSKHIVK'
# ---
# name: test_[0 1 2-JK-1 0 1]
  'DKMXDUQ'
# ---
# name: test_[0 1 2-JK-1 0 2]
  'BZIFDBG'
# ---
# name: test_[0 1 2-JK-1 1 0]
  'KOUVKDY'
# ---
# name: test_[0 1 2-JK-1 1 1]
  'ERNCWYP'
# ---
# name: test_[0 1 2-JK-1 1 2]
  'YBZWBZP'
# ---
# name: test_[0 1 2-JK-1 2 0]
  'MSTMUIZ'
# ---
# name: test_[0 1 2-JK-1 2 1]
  'CPYGRRA'
# ---
# name: test_[0 1 2-JK-1 2 2]
  'IGRWTRF'
# ---
# name: test_[0 1 2-JK-2 0 0]
  'SKHIVRO'
# ---
# name: test_[0 1 2-JK-2 0 1]
  'KMXDURV'
# ---
# name: test_[0 1 2-JK-2 0 2]
  'ZIFDBZE'
# ---
# name: test_[0 1 2-JK-2 1 0]
  'OUVKDFA'
# ---
# name: test_[0 1 2-JK-2 1 1]
  'RNCWYLK'
# ---
# name: test_[0 1 2-JK-2 1 2]
  'BZWBZIZ'
# ---
# name: test_[0 1 2-JK-2 2 0]
  'STMUIRB'
# ---
# name: test_[0 1 2-JK-2 2 1]
  'PYGRRHR'
# ---
# name: test_[0 1 2-JK-2 2 2]
  'GRWTRDI'
# ---
# name: test_[0 2 1--0 0 0]
  'ZFJJSFS'
# ---
# name: test_[0 2 1--0 0 1]
  'XKNGSBT'
# ---
# name: test_[0 2 1--0 0 2]
  'GHDIJXY'
# ---
# name: test_[0 2 1--0 1 0]
  'FVOGVVA'
# ---
# name: test_[0 2 1--0 1 1]
  'NIEMHFU'
# ---
# name: test_[0 2 1--0 1 2]
  'UWTWJNY'
# ---
# name: test_[0 2 1--0 2 0]
  'GCSYJHY'
# ---
# name: test_[0 2 1--0 2 1]
  'XTENJGY'
# ---
# name: test_[0 2 1--0 2 2]
  'YIPDDNI'
# ---
# name: test_[0 2 1--1 0 0]
  'FJJSFVL'
# ---
# name: test_[0 2 1--1 0 1]
  'KNGSBZF'
# ---
# name: test_[0 2 1--1 0 2]
  'HDIJXUJ'
# ---
# name: test_[0 2 1--1 1 0]
  'VOGVVHR'
# ---
# name: test_[0 2 1--1 1 1]
  'IEMHFWF'
# ---
# name: test_[0 2 1--1 1 2]
  'WTWJNDI'
# ---
# name: test_[0 2 1--1 2 0]
  'CSYJHUE'
# ---
# name: test_[0 2 1--1 2 1]
  'TENJGWR'
# ---
# name: test_[0 2 1--1 2 2]
  'IPDDNXG'
# ---
# name: test_[0 2 1--2 0 0]
  'JJSFVNI'
# ---
# name: test_[0 2 1--2 0 1]
  'NGSBZMU'
# ---
# name: test_[0 2 1--2 0 2]
  'DIJXURL'
# ---
# name: test_[0 2 1--2 1 0]
  'OGVVHFJ'
# ---
# name: test_[0 2 1--2 1 1]
  'EMHFWKV'
# ---
# name: test_[0 2 1--2 1 2]
  'TWJNDPG'
# ---
# name: test_[0 2 1--2 2 0]
  'SYJHUQB'
# ---
# name: test_[0 2 1--2 2 1]
  'ENJGWOE'
# ---
# name: test_[0 2 1--2 2 2]
  'PDDNXXL'
# ---
# name: test_[0 2 1-AI JK-0 0 0]
  'RUDZZTS'
# ---
# name: test_[0 2 1-AI JK-0 0 1]
  'JCGYJUT'
# ---
# name: test_[0 2 1-AI JK-0 0 2]
  'BLXIFZY'
# ---
# name: test_[0 2 1-AI JK-0 1 0]
  'UCKHDBI'
# ---
# name: test_[0 2 1-AI JK-0 1 1]
  'TIDBJVU'
# ---
# name: test_[0 2 1-AI JK-0 1 2]
  'TFWKHZY'
# ---
# name: test_[0 2 1-AI JK-0 2 0]
  'WOQLBZY'
# ---
# name: test_[0 2 1-AI JK-0 2 1]
  'JSGCLZY'
# ---
# name: test_[0 2 1-AI JK-0 2 2]
  'LIOFRKA'
# ---
# name: test_[0 2 1-AI JK-1 0 0]
  'UDZZTML'
# ---
# name: test_[0 2 1-AI JK-1 0 1]
  'CGYJUGF'
# ---
# name: test_[0 2 1-AI JK-1 0 2]
  'LXIFZJK'
# ---
# name: test_[0 2 1-AI JK-1 1 0]
  'CKHDBSR'
# ---
# name: test_[0 2 1-AI JK-1 1 1]
  'IDBJVGF'
# ---
# name: test_[0 2 1-AI JK-1 1 2]
  'FWKHZKA'
# ---
# name: test_[0 2 1-AI JK-1 2 0]
  'OQLBZFE'
# ---
# name: test_[0 2 1-AI JK-1 2 1]
  'SGCLZSR'
# ---
# name: test_[0 2 1-AI JK-1 2 2]
  'IOFRKHG'
# ---
# name: test_[0 2 1-AI JK-2 0 0]
  'DZZTMKA'
# ---
# name: test_[0 2 1-AI JK-2 0 1]
  'GYJUGVU'
# ---
# name: test_[0 2 1-AI JK-2 0 2]
  'XIFZJML'
# ---
# name: test_[0 2 1-AI JK-2 1 0]
  'KHDBSJK'
# ---
# name: test_[0 2 1-AI JK-2 1 1]
  'DBJVGWV'
# ---
# name: test_[0 2 1-AI JK-2 1 2]
  'WKHZKHG'
# ---
# name: test_[0 2 1-AI JK-2 2 0]
  'QLBZFCB'
# ---
# name: test_[0 2 1-AI JK-2 2 1]
  'GCLZSFE'
# ---
# name: test_[0 2 1-AI JK-2 2 2]
  'OFRKHML'
# ---
# name: test_[0 2 1-AI PU BM-0 0 0]
  'RPDZZTS'
# ---
# name: test_[0 2 1-AI PU BM-0 0 1]
  'KCGYKPT'
# ---
# name: test_[0 2 1-AI PU BM-0 0 2]
  'MLXIFZY'
# ---
# name: test_[0 2 1-AI PU BM-0 1 0]
  'PCJHDMI'
# ---
# name: test_[0 2 1-AI PU BM-0 1 1]
  'TIDMKVP'
# ---
# name: test_[0 2 1-AI PU BM-0 1 2]
  'TFWJHZY'
# ---
# name: test_[0 2 1-AI PU BM-0 2 0]
  'WOQLMZY'
# ---
# name: test_[0 2 1-AI PU BM-0 2 1]
  'KSGCLZY'
# ---
# name: test_[0 2 1-AI PU BM-0 2 2]
  'LIOFRJA'
# ---
# name: test_[0 2 1-AI PU BM-1 0 0]
  'PDZZTBL'
# ---
# name: test_[0 2 1-AI PU BM-1 0 1]
  'CGYKPGF'
# ---
# name: test_[0 2 1-AI PU BM-1 0 2]
  'LXIFZKJ'
# ---
# name: test_[0 2 1-AI PU BM-1 1 0]
  'CJHDMSR'
# ---
# name: test_[0 2 1-AI PU BM-1 1 1]
  'IDMKVGF'
# ---
# name: test_[0 2 1-AI PU BM-1 1 2]
  'FWJHZJA'
# ---
# name: test_[0 2 1-AI PU BM-1 2 0]
  'OQLMZFE'
# ---
# name: test_[0 2 1-AI PU BM-1 2 1]
  'SGCLZSR'
# ---
# name: test_[0 2 1-AI PU BM-1 2 2]
  'IOFRJHG'
# ---
# name: test_[0 2 1-AI PU BM-2 0 0]
  'DZZTBJA'
# ---
# name: test_[0 2 1-AI PU BM-2 0 1]
  'GYKPGVP'
# ---
# name: test_[0 2 1-AI PU BM-2 0 2]
  'XIFZKBL'
# ---
# name: test_[0 2 1-AI PU BM-2 1 0]
  'JHDMSKJ'
# ---
# name: test_[0 2 1-AI PU BM-2 1 1]
  'DMKVGWV'
# ---
# name: test_[0 2 1-AI PU BM-2 1 2]
  'WJHZJHG'
# ---
# name: test_[0 2 1-AI PU BM-2 2 0]
  'QLMZFCM'
# ---
# name: test_[0 2 1-AI PU BM-2 2 1]
  'GCLZSFE'
# ---
# name: test_[0 2 1-AI PU BM-2 2 2]
  'OFRJHBL'
# ---
# name: test_[0 2 1-AI-0 0 0]
  'RUDZZTS'
# ---
# name: test_[0 2 1-AI-0 0 1]
  'KCGYKUT'
# ---
# name: test_[0 2 1-AI-0 0 2]
  'BLXIFZY'
# ---
# name: test_[0 2 1-AI-0 1 0]
  'UCJHDBI'
# ---
# name: test_[0 2 1-AI-0 1 1]
  'TIDBKVU'
# ---
# name: test_[0 2 1-AI-0 1 2]
  'TFWJHZY'
# ---
# name: test_[0 2 1-AI-0 2 0]
  'WOQLBZY'
# ---
# name: test_[0 2 1-AI-0 2 1]
  'KSGCLZY'
# ---
# name: test_[0 2 1-AI-0 2 2]
  'LIOFRJA'
# ---
# name: test_[0 2 1-AI-1 0 0]
  'UDZZTML'
# ---
# name: test_[0 2 1-AI-1 0 1]
  'CGYKUGF'
# ---
# name: test_[0 2 1-AI-1 0 2]
  'LXIFZKJ'
# ---
# name: test_[0 2 1-AI-1 1 0]
  'CJHDBSR'
# ---
# name: test_[0 2 1-AI-1 1 1]
  'IDBKVGF'
# ---
# name: test_[0 2 1-AI-1 1 2]
  'FWJHZJA'
# ---
# name: test_[0 2 1-AI-1 2 0]
  'OQLBZFE'
# ---
# name: test_[0 2 1-AI-1 2 1]
  'SGCLZSR'
# ---
# name: test_[0 2 1-AI-1 2 2]
  'IOFRJHG'
# ---
# name: test_[0 2 1-AI-2 0 0]
  'DZZTMJA'
# ---
# name: test_[0 2 1-AI-2 0 1]
  'GYKUGVU'
# ---
# name: test_[0 2 1-AI-2 0 2]
  'XIFZKML'
# ---
# name: test_[0 2 1-AI-2 1 0]
  'JHDBSKJ'
# ---
# name: test_[0 2 1-AI-2 1 1]
  'DBKVGWV'
# ---
# name: test_[0 2 1-AI-2 1 2]
  'WJHZJHG'
# ---
# name: test_[0 2 1-AI-2 2 0]
  'QLBZFCB'
# ---
# name: test_[0 2 1-AI-2 2 1]
  'GCLZSFE'
# ---
# name: test_[0 2 1-AI-2 2 2]
  'OFRJHML'
# ---
# name: test_[0 2 1-JK-0 0 0]
  'ZFKKSFS'
# ---
# name: test_[0 2 1-JK-0 0 1]
  'XJNGSBT'
# ---
# name: test_[0 2 1-JK-0 0 2]
  'GHDIKXY'
# ---
# name: test_[0 2 1-JK-0 1 0]
  'FVOGVVA'
# ---
# name: test_[0 2 1-JK-0 1 1]
  'NIEMHFU'
# ---
# name: test_[0 2 1-JK-0 1 2]
  'UWTWKNY'
# ---
# name: test_[0 2 1-JK-0 2 0]
  'GCSYKHY'
# ---
# name: test_[0 2 1-JK-0 2 1]
  'XTENKGY'
# ---
# name: test_[0 2 1-JK-0 2 2]
  'YIPDDNI'
# ---
# name: test_[0 2 1-JK-1 0 0]
  'FKKSFVL'
# ---
# name: test_[0 2 1-JK-1 0 1]
  'JNGSBZF'
# ---
# name: test_[0 2 1-JK-1 0 2]
  'HDIKXUK'
# ---
# name: test_[0 2 1-JK-1 1 0]
  'VOGVVHR'
# ---
# name: test_[0 2 1-JK-1 1 1]
  'IEMHFWF'
# ---
# name: test_[0 2 1-JK-1 1 2]
  'WTWKNDI'
# ---
# name: test_[0 2 1-JK-1 2 0]
  'CSYKHUE'
# ---
# name: test_[0 2 1-JK-1 2 1]
  'TENKGWR'
# ---
# name: test_[0 2 1-JK-1 2 2]
  'IPDDNXG'
# ---
# name: test_[0 2 1-JK-2 0 0]
  'KKSFVNI'
# ---
# name: test_[0 2 1-JK-2 0 1]
  'NGSBZMU'
# ---
# name: test_[0 2 1-JK-2 0 2]
  'DIKXURL'
# ---
# name: test_[0 2 1-JK-2 1 0]
  'OGVVHFK'
# ---
# name: test_[0 2 1-JK-2 1 1]
  'EMHFWJV'
# ---
# name: test_[0 2 1-JK-2 1 2]
  'TWKNDPG'
# ---
# name: test_[0 2 1-JK-2 2 0]
  'SYKHUQB'
# ---
# name: test_[0 2 1-JK-2 2 1]
  'ENKGWOE'
# ---
# name: test_[0 2 1-JK-2 2 2]
  'PDDNXXL'
# ---
# name: test_[1 0 2--0 0 0]
  'FHEOVVK'
# ---
# name: test_[1 0 2--0 0 1]
  'NXCCYYU'
# ---
# name: test_[1 0 2--0 0 2]
  'WNXUDNO'
# ---
# name: test_[1 0 2--0 1 0]
  'YJMORKD'
# ---
# name: test_[1 0 2--0 1 1]
  'WLRITCD'
# ---
# name: test_[1 0 2--0 1 2]
  'LTXUGLL'
# ---
# name: test_[1 0 2--0 2 0]
  'XJBZKHK'
# ---
# name: test_[1 0 2--0 2 1]
  'WXHUOFT'
# ---
# name: test_[1 0 2--0 2 2]
  'TKHCGYI'
# ---
# name: test_[1 0 2--1 0 0]
  'HEOVVWI'
# ---
# name: test_[1 0 2--1 0 1]
  'XCCYYCN'
# ---
# name: test_[1 0 2--1 0 2]
  'NXUDNSU'
# ---
# name: test_[1 0 2--1 1 0]
  'JMORKTV'
# ---
# name: test_[1 0 2--1 1 1]
  'LRITCMN'
# ---
# name: test_[1 0 2--1 1 2]
  'TXUGLCC'
# ---
# name: test_[1 0 2--1 2 0]
  'JBZKHQX'
# ---
# name: test_[1 0 2--1 2 1]
  'XHUOFPM'
# ---
# name: test_[1 0 2--1 2 2]
  'KHCGYCG'
# ---
# name: test_[1 0 2--2 0 0]
  'EOVVWPG'
# ---
# name: test_[1 0 2--2 0 1]
  'CCYYCKE'
# ---
# name: test_[1 0 2--2 0 2]
  'XUDNSXJ'
# ---
# name: test_[1 0 2--2 1 0]
  'MORKTEX'
# ---
# name: test_[1 0 2--2 1 1]
  'RITCMYA'
# ---
# name: test_[1 0 2--2 1 2]
  'XUGLCIZ'
# ---
# name: test_[1 0 2--2 2 0]
  'BZKHQOD'
# ---
# name: test_[1 0 2--2 2 1]
  'HUOFPBD'
# ---
# name: test_[1 0 2--2 2 2]
  'HCGYCKO'
# ---
# name: test_[1 0 2-AI JK-0 0 0]
  'BJSGULJ'
# ---
# name: test_[1 0 2-AI JK-0 0 1]
  'GYRNLVU'
# ---
# name: test_[1 0 2-AI JK-0 0 2]
  'LPRFRPO'
# ---
# name: test_[1 0 2-AI JK-0 1 0]
  'SMZETED'
# ---
# name: test_[1 0 2-AI JK-0 1 1]
  'PMPIXED'
# ---
# name: test_[1 0 2-AI JK-0 1 2]
  'GNCXOML'
# ---
# name: test_[1 0 2-AI JK-0 2 0]
  'ZRZMBLJ'
# ---
# name: test_[1 0 2-AI JK-0 2 1]
  'HBDMNUT'
# ---
# name: test_[1 0 2-AI JK-0 2 2]
  'GBCYQKA'
# ---
# name: test_[1 0 2-AI JK-1 0 0]
  'JSGULKA'
# ---
# name: test_[1 0 2-AI JK-1 0 1]
  'YRNLVON'
# ---
# name: test_[1 0 2-AI JK-1 0 2]
  'PRFRPVU'
# ---
# name: test_[1 0 2-AI JK-1 1 0]
  'MZETEWV'
# ---
# name: test_[1 0 2-AI JK-1 1 1]
  'MPIXEON'
# ---
# name: test_[1 0 2-AI JK-1 1 2]
  'NCXOMDC'
# ---
# name: test_[1 0 2-AI JK-1 2 0]
  'RZMBLYX'
# ---
# name: test_[1 0 2-AI JK-1 2 1]
  'BDMNUNM'
# ---
# name: test_[1 0 2-AI JK-1 2 2]
  'BCYQKHG'
# ---
# name: test_[1 0 2-AI JK-2 0 0]
  'SGULKHG'
# ---
# name: test_[1 0 2-AI JK-2 0 1]
  'RNLVOFE'
# ---
# name: test_[1 0 2-AI JK-2 0 2]
  'RFRPVJK'
# ---
# name: test_[1 0 2-AI JK-2 1 0]
  'ZETEWYX'
# ---
# name: test_[1 0 2-AI JK-2 1 1]
  'PIXEOBI'
# ---
# name: test_[1 0 2-AI JK-2 1 2]
  'CXOMDIZ'
# ---
# name: test_[1 0 2-AI JK-2 2 0]
  'ZMBLYED'
# ---
# name: test_[1 0 2-AI JK-2 2 1]
  'DMNUNED'
# ---
# name: test_[1 0 2-AI JK-2 2 2]
  'CYQKHPO'
# ---
# name: test_[1 0 2-AI PU BM-0 0 0]
  'MKSGPLK'
# ---
# name: test_[1 0 2-AI PU BM-0 0 1]
  'GYRNLVP'
# ---
# name: test_[1 0 2-AI PU BM-0 0 2]
  'LURFRUO'
# ---
# name: test_[1 0 2-AI PU BM-0 1 0]
  'SBZETED'
# ---
# name: test_[1 0 2-AI PU BM-0 1 1]
  'UBUIXED'
# ---
# name: test_[1 0 2-AI PU BM-0 1 2]
  'GNCXOBL'
# ---
# name: test_[1 0 2-AI PU BM-0 2 0]
  'ZRZBMLK'
# ---
# name: test_[1 0 2-AI PU BM-0 2 1]
  'HMDBNPT'
# ---
# name: test_[1 0 2-AI PU BM-0 2 2]
  'GMCYQJA'
# ---
# name: test_[1 0 2-AI PU BM-1 0 0]
  'KSGPLJA'
# ---
# name: test_[1 0 2-AI PU BM-1 0 1]
  'YRNLVON'
# ---
# name: test_[1 0 2-AI PU BM-1 0 2]
  'URFRUVP'
# ---
# name: test_[1 0 2-AI PU BM-1 1 0]
  'BZETEWV'
# ---
# name: test_[1 0 2-AI PU BM-1 1 1]
  'BUIXEON'
# ---
# name: test_[1 0 2-AI PU BM-1 1 2]
  'NCXOBDC'
# ---
# name: test_[1 0 2-AI PU BM-1 2 0]
  'RZBMLYX'
# ---
# name: test_[1 0 2-AI PU BM-1 2 1]
  'MDBNPNB'
# ---
# name: test_[1 0 2-AI PU BM-1 2 2]
  'MCYQJHG'
# ---
# name: test_[1 0 2-AI PU BM-2 0 0]
  'SGPLJHG'
# ---
# name: test_[1 0 2-AI PU BM-2 0 1]
  'RNLVOFE'
# ---
# name: test_[1 0 2-AI PU BM-2 0 2]
  'RFRUVKJ'
# ---
# name: test_[1 0 2-AI PU BM-2 1 0]
  'ZETEWYX'
# ---
# name: test_[1 0 2-AI PU BM-2 1 1]
  'UIXEOMI'
# ---
# name: test_[1 0 2-AI PU BM-2 1 2]
  'CXOBDIZ'
# ---
# name: test_[1 0 2-AI PU BM-2 2 0]
  'ZBMLYED'
# ---
# name: test_[1 0 2-AI PU BM-2 2 1]
  'DBNPNED'
# ---
# name: test_[1 0 2-AI PU BM-2 2 2]
  'CYQJHUO'
# ---
# name: test_[1 0 2-AI-0 0 0]
  'BKSGULK'
# ---
# name: test_[1 0 2-AI-0 0 1]
  'GYRNLVU'
# ---
# name: test_[1 0 2-AI-0 0 2]
  'LPRFRPO'
# ---
# name: test_[1 0 2-AI-0 1 0]
  'SMZETED'
# ---
# name: test_[1 0 2-AI-0 1 1]
  'PMPIXED'
# ---
# name: test_[1 0 2-AI-0 1 2]
  'GNCXOML'
# ---
# name: test_[1 0 2-AI-0 2 0]
  'ZRZMBLK'
# ---
# name: test_[1 0 2-AI-0 2 1]
  'HBDMNUT'
# ---
# name: test_[1 0 2-AI-0 2 2]
  'GBCYQJA'
# ---
# name: test_[1 0 2-AI-1 0 0]
  'KSGULJA'
# ---
# name: test_[1 0 2-AI-1 0 1]
  'YRNLVON'
# ---
# name: test_[1 0 2-AI-1 0 2]
  'PRFRPVU'
# ---
# name: test_[1 0 2-AI-1 1 0]
  'MZETEWV'
# ---
# name: test_[1 0 2-AI-1 1 1]
  'MPIXEON'
# ---
# name: test_[1 0 2-AI-1 1 2]
  'NCXOMDC'
# ---
# name: test_[1 0 2-AI-1 2 0]
  'RZMBLYX'
# ---
# name: test_[1 0 2-AI-1 2 1]
  'BDMNUNM'
# ---
# name: test_[1 0 2-AI-1 2 2]
  'BCYQJHG'
# ---
# name: test_[1 0 2-AI-2 0 0]
  'SGULJHG'
# ---
# name: test_[1 0 2-AI-2 0 1]
  'RNLVOFE'
# ---
# name: test_[1 0 2-AI-2 0 2]
  'RFRPVKJ'
# ---
# name: test_[1 0 2-AI-2 1 0]
  'ZETEWYX'
# ---
# name: test_[1 0 2-AI-2 1 1]
  'PIXEOBI'
# ---
# name: test_[1 0 2-AI-2 1 2]
  'CXOMDIZ'
# ---
# name: test_[1 0 2-AI-2 2 0]
  'ZMBLYED'
# ---
# name: test_[1 0 2-AI-2 2 1]
  'DMNUNED'
# ---
# name: test_[1 0 2-AI-2 2 2]
  'CYQJHPO'
# ---
# name: test_[1 0 2-JK-0 0 0]
  'FHEOVVJ'
# ---
# name: test_[1 0 2-JK-0 0 1]
  'NXCCYYU'
# ---
# name: test_[1 0 2-JK-0 0 2]
  'WNXUDNO'
# ---
# name: test_[1 0 2-JK-0 1 0]
  'YKMORJD'
# ---
# name: test_[1 0 2-JK-0 1 1]
  'WLRITCD'
# ---
# name: test_[1 0 2-JK-0 1 2]
  'LTXUGLL'
# ---
# name: test_[1 0 2-JK-0 2 0]
  'XKBZJHJ'
# ---
# name: test_[1 0 2-JK-0 2 1]
  'WXHUOFT'
# ---
# name: test_[1 0 2-JK-0 2 2]
  'TJHCGYI'
# ---
# name: test_[1 0 2-JK-1 0 0]
  'HEOVVWI'
# ---
# name: test_[1 0 2-JK-1 0 1]
  'XCCYYCN'
# ---
# name: test_[1 0 2-JK-1 0 2]
  'NXUDNSU'
# ---
# name: test_[1 0 2-JK-1 1 0]
  'KMORJTV'
# ---
# name: test_[1 0 2-JK-1 1 1]
  'LRITCMN'
# ---
# name: test_[1 0 2-JK-1 1 2]
  'TXUGLCC'
# ---
# name: test_[1 0 2-JK-1 2 0]
  'KBZJHQX'
# ---
# name: test_[1 0 2-JK-1 2 1]
  'XHUOFPM'
# ---
# name: test_[1 0 2-JK-1 2 2]
  'JHCGYCG'
# ---
# name: test_[1 0 2-JK-2 0 0]
  'EOVVWPG'
# ---
# name: test_[1 0 2-JK-2 0 1]
  'CCYYCJE'
# ---
# name: test_[1 0 2-JK-2 0 2]
  'XUDNSXK'
# ---
# name: test_[1 0 2-JK-2 1 0]
  'MORJTEX'
# ---
# name: test_[1 0 2-JK-2 1 1]
  'RITCMYA'
# ---
# name: test_[1 0 2-JK-2 1 2]
  'XUGLCIZ'
# ---
# name: test_[1 0 2-JK-2 2 0]
  'BZJHQOD'
# ---
# name: test_[1 0 2-JK-2 2 1]
  'HUOFPBD'
# ---
# name: test_[1 0 2-JK-2 2 2]
  'HCGYCJO'
# ---
# name: test_[1 2 0--0 0 0]
  'VXOKTHX'
# ---
# name: test_[1 2 0--0 0 1]
  'NYEHIQU'
# ---
# name: test_[1 2 0--0 0 2]
  'DNOXOIZ'
# ---
# name: test_[1 2 0--0 1 0]
  'VVRGOUS'
# ---
# name: test_[1 2 0--0 1 1]
  'HBZIRSQ'
# ---
# name: test_[1 2 0--0 1 2]
  'FOMHFVM'
# ---
# name: test_[1 2 0--0 2 0]
  'UVJGDTM'
# ---
# name: test_[1 2 0--0 2 1]
  'OOWJNFQ'
# ---
# name: test_[1 2 0--0 2 2]
  'JEFOKWF'
# ---
# name: test_[1 2 0--1 0 0]
  'XOKTHFK'
# ---
# name: test_[1 2 0--1 0 1]
  'YEHIQWL'
# ---
# name: test_[1 2 0--1 0 2]
  'NOXOITU'
# ---
# name: test_[1 2 0--1 1 0]
  'VRGOUBK'
# ---
# name: test_[1 2 0--1 1 1]
  'BZIRSTL'
# ---
# name: test_[1 2 0--1 1 2]
  'OMHFVBV'
# ---
# name: test_[1 2 0--1 2 0]
  'VJGDTPJ'
# ---
# name: test_[1 2 0--1 2 1]
  'OWJNFNT'
# ---
# name: test_[1 2 0--1 2 2]
  'EFOKWQX'
# ---
# name: test_[1 2 0--2 0 0]
  'OKTHFSB'
# ---
# name: test_[1 2 0--2 0 1]
  'EHIQWIZ'
# ---
# name: test_[1 2 0--2 0 2]
  'OXOITPL'
# ---
# name: test_[1 2 0--2 1 0]
  'RGOUBZM'
# ---
# name: test_[1 2 0--2 1 1]
  'ZIRSTTI'
# ---
# name: test_[1 2 0--2 1 2]
  'MHFVBZT'
# ---
# name: test_[1 2 0--2 2 0]
  'JGDTPXC'
# ---
# name: test_[1 2 0--2 2 1]
  'WJNFNNT'
# ---
# name: test_[1 2 0--2 2 2]
  'FOKWQVK'
# ---
# name: test_[1 2 0-AI JK-0 0 0]
  'WOQDBYX'
# ---
# name: test_[1 2 0-AI JK-0 0 1]
  'KHBTIVU'
# ---
# name: test_[1 2 0-AI JK-0 0 2]
  'JQGRUIZ'
# ---
# name: test_[1 2 0-AI JK-0 1 0]
  'MCKHETS'
# ---
# name: test_[1 2 0-AI JK-0 1 1]
  'TQWIQRQ'
# ---
# name: test_[1 2 0-AI JK-0 1 2]
  'ZDBOTNM'
# ---
# name: test_[1 2 0-AI JK-0 2 0]
  'RCNZVNM'
# ---
# name: test_[1 2 0-AI JK-0 2 1]
  'ZRDUZRQ'
# ---
# name: test_[1 2 0-AI JK-0 2 2]
  'QZWJVGF'
# ---
# name: test_[1 2 0-AI JK-1 0 0]
  'OQDBYLJ'
# ---
# name: test_[1 2 0-AI JK-1 0 1]
  'HBTIVML'
# ---
# name: test_[1 2 0-AI JK-1 0 2]
  'QGRUIVU'
# ---
# name: test_[1 2 0-AI JK-1 1 0]
  'CKHETLJ'
# ---
# name: test_[1 2 0-AI JK-1 1 1]
  'QWIQRML'
# ---
# name: test_[1 2 0-AI JK-1 1 2]
  'DBOTNWV'
# ---
# name: test_[1 2 0-AI JK-1 2 0]
  'CNZVNJK'
# ---
# name: test_[1 2 0-AI JK-1 2 1]
  'RDUZRUT'
# ---
# name: test_[1 2 0-AI JK-1 2 2]
  'ZWJVGYX'
# ---
# name: test_[1 2 0-AI JK-2 0 0]
  'QDBYLCB'
# ---
# name: test_[1 2 0-AI JK-2 0 1]
  'BTIVMIZ'
# ---
# name: test_[1 2 0-AI JK-2 0 2]
  'GRUIVML'
# ---
# name: test_[1 2 0-AI JK-2 1 0]
  'KHETLNM'
# ---
# name: test_[1 2 0-AI JK-2 1 1]
  'WIQRMKA'
# ---
# name: test_[1 2 0-AI JK-2 1 2]
  'BOTNWUT'
# ---
# name: test_[1 2 0-AI JK-2 2 0]
  'NZVNJDC'
# ---
# name: test_[1 2 0-AI JK-2 2 1]
  'DUZRUUT'
# ---
# name: test_[1 2 0-AI JK-2 2 2]
  'WJVGYLJ'
# ---
# name: test_[1 2 0-AI PU BM-0 0 0]
  'WOQDMYX'
# ---
# name: test_[1 2 0-AI PU BM-0 0 1]
  'JHMTIVP'
# ---
# name: test_[1 2 0-AI PU BM-0 0 2]
  'KQGRPIZ'
# ---
# name: test_[1 2 0-AI PU BM-0 1 0]
  'BCJHETS'
# ---
# name: test_[1 2 0-AI PU BM-0 1 1]
  'TQWIQRQ'
# ---
# name: test_[1 2 0-AI PU BM-0 1 2]
  'ZDMOTNB'
# ---
# name: test_[1 2 0-AI PU BM-0 2 0]
  'RCNZVNB'
# ---
# name: test_[1 2 0-AI PU BM-0 2 1]
  'ZRDPZRQ'
# ---
# name: test_[1 2 0-AI PU BM-0 2 2]
  'QZWKVGF'
# ---
# name: test_[1 2 0-AI PU BM-1 0 0]
  'OQDMYLK'
# ---
# name: test_[1 2 0-AI PU BM-1 0 1]
  'HMTIVBL'
# ---
# name: test_[1 2 0-AI PU BM-1 0 2]
  'QGRPIVP'
# ---
# name: test_[1 2 0-AI PU BM-1 1 0]
  'CJHETLK'
# ---
# name: test_[1 2 0-AI PU BM-1 1 1]
  'QWIQRBL'
# ---
# name: test_[1 2 0-AI PU BM-1 1 2]
  'DMOTNWV'
# ---
# name: test_[1 2 0-AI PU BM-1 2 0]
  'CNZVNKJ'
# ---
# name: test_[1 2 0-AI PU BM-1 2 1]
  'RDPZRPT'
# ---
# name: test_[1 2 0-AI PU BM-1 2 2]
  'ZWKVGYX'
# ---
# name: test_[1 2 0-AI PU BM-2 0 0]
  'QDMYLCM'
# ---
# name: test_[1 2 0-AI PU BM-2 0 1]
  'MTIVBIZ'
# ---
# name: test_[1 2 0-AI PU BM-2 0 2]
  'GRPIVBL'
# ---
# name: test_[1 2 0-AI PU BM-2 1 0]
  'JHETLNB'
# ---
# name: test_[1 2 0-AI PU BM-2 1 1]
  'WIQRBJA'
# ---
# name: test_[1 2 0-AI PU BM-2 1 2]
  'MOTNWPT'
# ---
# name: test_[1 2 0-AI PU BM-2 2 0]
  'NZVNKDC'
# ---
# name: test_[1 2 0-AI PU BM-2 2 1]
  'DPZRPPT'
# ---
# name: test_[1 2 0-AI PU BM-2 2 2]
  'WKVGYLK'
# ---
# name: test_[1 2 0-AI-0 0 0]
  'WOQDBYX'
# ---
# name: test_[1 2 0-AI-0 0 1]
  'JHBTIVU'
# ---
# name: test_[1 2 0-AI-0 0 2]
  'KQGRUIZ'
# ---
# name: test_[1 2 0-AI-0 1 0]
  'MCJHETS'
# ---
# name: test_[1 2 0-AI-0 1 1]
  'TQWIQRQ'
# ---
# name: test_[1 2 0-AI-0 1 2]
  'ZDBOTNM'
# ---
# name: test_[1 2 0-AI-0 2 0]
  'RCNZVNM'
# ---
# name: test_[1 2 0-AI-0 2 1]
  'ZRDUZRQ'
# ---
# name: test_[1 2 0-AI-0 2 2]
  'QZWKVGF'
# ---
# name: test_[1 2 0-AI-1 0 0]
  'OQDBYLK'
# ---
# name: test_[1 2 0-AI-1 0 1]
  'HBTIVML'
# ---
# name: test_[1 2 0-AI-1 0 2]
  'QGRUIVU'
# ---
# name: test_[1 2 0-AI-1 1 0]
  'CJHETLK'
# ---
# name: test_[1 2 0-AI-1 1 1]
  'QWIQRML'
# ---
# name: test_[1 2 0-AI-1 1 2]
  'DBOTNWV'
# ---
# name: test_[1 2 0-AI-1 2 0]
  'CNZVNKJ'
# ---
# name: test_[1 2 0-AI-1 2 1]
  'RDUZRUT'
# ---
# name: test_[1 2 0-AI-1 2 2]
  'ZWKVGYX'
# ---
# name: test_[1 2 0-AI-2 0 0]
  'QDBYLCB'
# ---
# name: test_[1 2 0-AI-2 0 1]
  'BTIVMIZ'
# ---
# name: test_[1 2 0-AI-2 0 2]
  'GRUIVML'
# ---
# name: test_[1 2 0-AI-2 1 0]
  'JHETLNM'
# ---
# name: test_[1 2 0-AI-2 1 1]
  'WIQRMJA'
# ---
# name: test_[1 2 0-AI-2 1 2]
  'BOTNWUT'
# ---
# name: test_[1 2 0-AI-2 2 0]
  'NZVNKDC'
# ---
# name: test_[1 2 0-AI-2 2 1]
  'DUZRUUT'
# ---
# name: test_[1 2 0-AI-2 2 2]
  'WKVGYLK'
# ---
# name: test_[1 2 0-JK-0 0 0]
  'VXOJTHX'
# ---
# name: test_[1 2 0-JK-0 0 1]
  'NYEHIQU'
# ---
# name: test_[1 2 0-JK-0 0 2]
  'DNOXOIZ'
# ---
# name: test_[1 2 0-JK-0 1 0]
  'VVRGOUS'
# ---
# name: test_[1 2 0-JK-0 1 1]
  'HBZIRSQ'
# ---
# name: test_[1 2 0-JK-0 1 2]
  'FOMHFVM'
# ---
# name: test_[1 2 0-JK-0 2 0]
  'UVKGDTM'
# ---
# name: test_[1 2 0-JK-0 2 1]
  'OOWKNFQ'
# ---
# name: test_[1 2 0-JK-0 2 2]
  'KEFOJWF'
# ---
# name: test_[1 2 0-JK-1 0 0]
  'XOJTHFJ'
# ---
# name: test_[1 2 0-JK-1 0 1]
  'YEHIQWL'
# ---
# name: test_[1 2 0-JK-1 0 2]
  'NOXOITU'
# ---
# name: test_[1 2 0-JK-1 1 0]
  'VRGOUBJ'
# ---
# name: test_[1 2 0-JK-1 1 1]
  'BZIRSTL'
# ---
# name: test_[1 2 0-JK-1 1 2]
  'OMHFVBV'
# ---
# name: test_[1 2 0-JK-1 2 0]
  'VKGDTPK'
# ---
# name: test_[1 2 0-JK-1 2 1]
  'OWKNFNT'
# ---
# name: test_[1 2 0-JK-1 2 2]
  'EFOJWQX'
# ---
# name: test_[1 2 0-JK-2 0 0]
  'OJTHFSB'
# ---
# name: test_[1 2 0-JK-2 0 1]
  'EHIQWIZ'
# ---
# name: test_[1 2 0-JK-2 0 2]
  'OXOITPL'
# ---
# name: test_[1 2 0-JK-2 1 0]
  'RGOUBZM'
# ---
# name: test_[1 2 0-JK-2 1 1]
  'ZIRSTTI'
# ---
# name: test_[1 2 0-JK-2 1 2]
  'MHFVBZT'
# ---
# name: test_[1 2 0-JK-2 2 0]
  'KGDTPXC'
# ---
# name: test_[1 2 0-JK-2 2 1]
  'WKNFNNT'
# ---
# name: test_[1 2 0-JK-2 2 2]
  'FOJWQVJ'
# ---
# name: test_[2 0 1--0 0 0]
  'JSOOORF'
# ---
# name: test_[2 0 1--0 0 1]
  'HJNRTRL'
# ---
# name: test_[2 0 1--0 0 2]
  'WXNLMOM'
# ---
# name: test_[2 0 1--0 1 0]
  'QXLJRPW'
# ---
# name: test_[2 0 1--0 1 1]
  'QJEKVOX'
# ---
# name: test_[2 0 1--0 1 2]
  'CNYPGOR'
# ---
# name: test_[2 0 1--0 2 0]
  'XGSMGDF'
# ---
# name: test_[2 0 1--0 2 1]
  'MQSCVYI'
# ---
# name: test_[2 0 1--0 2 2]
  'SJDELXN'
# ---
# name: test_[2 0 1--1 0 0]
  'SOOOROB'
# ---
# name: test_[2 0 1--1 0 1]
  'JNRTRDO'
# ---
# name: test_[2 0 1--1 0 2]
  'XNLMOCW'
# ---
# name: test_[2 0 1--1 1 0]
  'XLJRPIZ'
# ---
# name: test_[2 0 1--1 1 1]
  'JEKVOWA'
# ---
# name: test_[2 0 1--1 1 2]
  'NYPGOFU'
# ---
# name: test_[2 0 1--1 2 0]
  'GSMGDMC'
# ---
# name: test_[2 0 1--1 2 1]
  'QSCVYJG'
# ---
# name: test_[2 0 1--1 2 2]
  'JDELXIZ'
# ---
# name: test_[2 0 1--2 0 0]
  'OOOROFQ'
# ---
# name: test_[2 0 1--2 0 1]
  'NRTRDTU'
# ---
# name: test_[2 0 1--2 0 2]
  'NLMOCQU'
# ---
# name: test_[2 0 1--2 1 0]
  'LJRPIBK'
# ---
# name: test_[2 0 1--2 1 1]
  'EKVOWHQ'
# ---
# name: test_[2 0 1--2 1 2]
  'YPGOFFB'
# ---
# name: test_[2 0 1--2 2 0]
  'SMGDMUV'
# ---
# name: test_[2 0 1--2 2 1]
  'SCVYJQY'
# ---
# name: test_[2 0 1--2 2 2]
  'DELXIWW'
# ---
# name: test_[2 0 1-AI JK-0 0 0]
  'OZVJDGF'
# ---
# name: test_[2 0 1-AI JK-0 0 1]
  'TFZKHML'
# ---
# name: test_[2 0 1-AI JK-0 0 2]
  'GQTRVNM'
# ---
# name: test_[2 0 1-AI JK-0 1 0]
  'HWRWZXW'
# ---
# name: test_[2 0 1-AI JK-0 1 1]
  'XLZOFYX'
# ---
# name: test_[2 0 1-AI JK-0 1 2]
  'WOCDDSR'
# ---
# name: test_[2 0 1-AI JK-0 2 0]
  'FNCJMGF'
# ---
# name: test_[2 0 1-AI JK-0 2 1]
  'KHRPWKA'
# ---
# name: test_[2 0 1-AI JK-0 2 2]
  'LVZFTON'
# ---
# name: test_[2 0 1-AI JK-1 0 0]
  'ZVJDGCB'
# ---
# name: test_[2 0 1-AI JK-1 0 1]
  'FZKHMPO'
# ---
# name: test_[2 0 1-AI JK-1 0 2]
  'QTRVNXW'
# ---
# name: test_[2 0 1-AI JK-1 1 0]
  'WRWZXIZ'
# ---
# name: test_[2 0 1-AI JK-1 1 1]
  'LZOFYBI'
# ---
# name: test_[2 0 1-AI JK-1 1 2]
  'OCDDSVU'
# ---
# name: test_[2 0 1-AI JK-1 2 0]
  'NCJMGDC'
# ---
# name: test_[2 0 1-AI JK-1 2 1]
  'HRPWKHG'
# ---
# name: test_[2 0 1-AI JK-1 2 2]
  'VZFTOIZ'
# ---
# name: test_[2 0 1-AI JK-2 0 0]
  'VJDGCRQ'
# ---
# name: test_[2 0 1-AI JK-2 0 1]
  'ZKHMPVU'
# ---
# name: test_[2 0 1-AI JK-2 0 2]
  'TRVNXVU'
# ---
# name: test_[2 0 1-AI JK-2 1 0]
  'RWZXILJ'
# ---
# name: test_[2 0 1-AI JK-2 1 1]
  'ZOFYBRQ'
# ---
# name: test_[2 0 1-AI JK-2 1 2]
  'CDDSVCB'
# ---
# name: test_[2 0 1-AI JK-2 2 0]
  'CJMGDWV'
# ---
# name: test_[2 0 1-AI JK-2 2 1]
  'RPWKHZY'
# ---
# name: test_[2 0 1-AI JK-2 2 2]
  'ZFTOIXW'
# ---
# name: test_[2 0 1-AI PU BM-0 0 0]
  'OZVKDGF'
# ---
# name: test_[2 0 1-AI PU BM-0 0 1]
  'TFZJHBL'
# ---
# name: test_[2 0 1-AI PU BM-0 0 2]
  'GQTRVNB'
# ---
# name: test_[2 0 1-AI PU BM-0 1 0]
  'HWRWZXW'
# ---
# name: test_[2 0 1-AI PU BM-0 1 1]
  'XLZOFYX'
# ---
# name: test_[2 0 1-AI PU BM-0 1 2]
  'WOCDDSR'
# ---
# name: test_[2 0 1-AI PU BM-0 2 0]
  'FNCKBGF'
# ---
# name: test_[2 0 1-AI PU BM-0 2 1]
  'JHRUWJA'
# ---
# name: test_[2 0 1-AI PU BM-0 2 2]
  'LVZFTON'
# ---
# name: test_[2 0 1-AI PU BM-1 0 0]
  'ZVKDGCM'
# ---
# name: test_[2 0 1-AI PU BM-1 0 1]
  'FZJHBUO'
# ---
# name: test_[2 0 1-AI PU BM-1 0 2]
  'QTRVNXW'
# ---
# name: test_[2 0 1-AI PU BM-1 1 0]
  'WRWZXIZ'
# ---
# name: test_[2 0 1-AI PU BM-1 1 1]
  'LZOFYMI'
# ---
# name: test_[2 0 1-AI PU BM-1 1 2]
  'OCDDSVP'
# ---
# name: test_[2 0 1-AI PU BM-1 2 0]
  'NCKBGDC'
# ---
# name: test_[2 0 1-AI PU BM-1 2 1]
  'HRUWJHG'
# ---
# name: test_[2 0 1-AI PU BM-1 2 2]
  'VZFTOIZ'
# ---
# name: test_[2 0 1-AI PU BM-2 0 0]
  'VKDGCRQ'
# ---
# name: test_[2 0 1-AI PU BM-2 0 1]
  'ZJHBUVP'
# ---
# name: test_[2 0 1-AI PU BM-2 0 2]
  'TRVNXVP'
# ---
# name: test_[2 0 1-AI PU BM-2 1 0]
  'RWZXILK'
# ---
# name: test_[2 0 1-AI PU BM-2 1 1]
  'ZOFYMRQ'
# ---
# name: test_[2 0 1-AI PU BM-2 1 2]
  'CDDSVCM'
# ---
# name: test_[2 0 1-AI PU BM-2 2 0]
  'CKBGDWV'
# ---
# name: test_[2 0 1-AI PU BM-2 2 1]
  'RUWJHZY'
# ---
# name: test_[2 0 1-AI PU BM-2 2 2]
  'ZFTOIXW'
# ---
# name: test_[2 0 1-AI-0 0 0]
  'OZVKDGF'
# ---
# name: test_[2 0 1-AI-0 0 1]
  'TFZJHML'
# ---
# name: test_[2 0 1-AI-0 0 2]
  'GQTRVNM'
# ---
# name: test_[2 0 1-AI-0 1 0]
  'HWRWZXW'
# ---
# name: test_[2 0 1-AI-0 1 1]
  'XLZOFYX'
# ---
# name: test_[2 0 1-AI-0 1 2]
  'WOCDDSR'
# ---
# name: test_[2 0 1-AI-0 2 0]
  'FNCKMGF'
# ---
# name: test_[2 0 1-AI-0 2 1]
  'JHRPWJA'
# ---
# name: test_[2 0 1-AI-0 2 2]
  'LVZFTON'
# ---
# name: test_[2 0 1-AI-1 0 0]
  'ZVKDGCB'
# ---
# name: test_[2 0 1-AI-1 0 1]
  'FZJHMPO'
# ---
# name: test_[2 0 1-AI-1 0 2]
  'QTRVNXW'
# ---
# name: test_[2 0 1-AI-1 1 0]
  'WRWZXIZ'
# ---
# name: test_[2 0 1-AI-1 1 1]
  'LZOFYBI'
# ---
# name: test_[2 0 1-AI-1 1 2]
  'OCDDSVU'
# ---
# name: test_[2 0 1-AI-1 2 0]
  'NCKMGDC'
# ---
# name: test_[2 0 1-AI-1 2 1]
  'HRPWJHG'
# ---
# name: test_[2 0 1-AI-1 2 2]
  'VZFTOIZ'
# ---
# name: test_[2 0 1-AI-2 0 0]
  'VKDGCRQ'
# ---
# name: test_[2 0 1-AI-2 0 1]
  'ZJHMPVU'
# ---
# name: test_[2 0 1-AI-2 0 2]
  'TRVNXVU'
# ---
# name: test_[2 0 1-AI-2 1 0]
  'RWZXILK'
# ---
# name: test_[2 0 1-AI-2 1 1]
  'ZOFYBRQ'
# ---
# name: test_[2 0 1-AI-2 1 2]
  'CDDSVCB'
# ---
# name: test_[2 0 1-AI-2 2 0]
  'CKMGDWV'
# ---
# name: test_[2 0 1-AI-2 2 1]
  'RPWJHZY'
# ---
# name: test_[2 0 1-AI-2 2 2]
  'ZFTOIXW'
# ---
# name: test_[2 0 1-JK-0 0 0]
  'KSOOORF'
# ---
# name: test_[2 0 1-JK-0 0 1]
  'HKNRTRL'
# ---
# name: test_[2 0 1-JK-0 0 2]
  'WXNLMOM'
# ---
# name: test_[2 0 1-JK-0 1 0]
  'QXLKRPW'
# ---
# name: test_[2 0 1-JK-0 1 1]
  'QKEJVOX'
# ---
# name: test_[2 0 1-JK-0 1 2]
  'CNYPGOR'
# ---
# name: test_[2 0 1-JK-0 2 0]
  'XGSMGDF'
# ---
# name: test_[2 0 1-JK-0 2 1]
  'MQSCVYI'
# ---
# name: test_[2 0 1-JK-0 2 2]
  'SKDELXN'
# ---
# name: test_[2 0 1-JK-1 0 0]
  'SOOOROB'
# ---
# name: test_[2 0 1-JK-1 0 1]
  'KNRTRDO'
# ---
# name: test_[2 0 1-JK-1 0 2]
  'XNLMOCW'
# ---
# name: test_[2 0 1-JK-1 1 0]
  'XLKRPIZ'
# ---
# name: test_[2 0 1-JK-1 1 1]
  'KEJVOWA'
# ---
# name: test_[2 0 1-JK-1 1 2]
  'NYPGOFU'
# ---
# name: test_[2 0 1-JK-1 2 0]
  'GSMGDMC'
# ---
# name: test_[2 0 1-JK-1 2 1]
  'QSCVYKG'
# ---
# name: test_[2 0 1-JK-1 2 2]
  'KDELXIZ'
# ---
# name: test_[2 0 1-JK-2 0 0]
  'OOOROFQ'
# ---
# name: test_[2 0 1-JK-2 0 1]
  'NRTRDTU'
# ---
# name: test_[2 0 1-JK-2 0 2]
  'NLMOCQU'
# ---
# name: test_[2 0 1-JK-2 1 0]
  'LKRPIBJ'
# ---
# name: test_[2 0 1-JK-2 1 1]
  'EJVOWHQ'
# ---
# name: test_[2 0 1-JK-2 1 2]
  'YPGOFFB'
# ---
# name: test_[2 0 1-JK-2 2 0]
  'SMGDMUV'
# ---
# name: test_[2 0 1-JK-2 2 1]
  'SCVYKQY'
# ---
# name: test_[2 0 1-JK-2 2 2]
  'DELXIWW'
# ---
# name: test_[2 1 0--0 0 0]
  'IGKPQQK'
# ---
# name: test_[2 1 0--0 0 1]
  'WIQUPUO'
# ---
# name: test_[2 1 0--0 0 2]
  'MGCHYGA'
# ---
# name: test_[2 1 0--0 1 0]
  'ZJQMCJF'
# ---
# name: test_[2 1 0--0 1 1]
  'CPYDJRY'
# ---
# name: test_[2 1 0--0 1 2]
  'SUMFCMJ'
# ---
# name: test_[2 1 0--0 2 0]
  'NBZOVRU'
# ---
# name: test_[2 1 0--0 2 1]
  'QODGQXB'
# ---
# name: test_[2 1 0--0 2 2]
  'LMUOUKV'
# ---
# name: test_[2 1 0--1 0 0]
  'GKPQQIZ'
# ---
# name: test_[2 1 0--1 0 1]
  'IQUPUBO'
# ---
# name: test_[2 1 0--1 0 2]
  'GCHYGHC'
# ---
# name: test_[2 1 0--1 1 0]
  'JQMCJYY'
# ---
# name: test_[2 1 0--1 1 1]
  'PYDJRXS'
# ---
# name: test_[2 1 0--1 1 2]
  'UMFCMYV'
# ---
# name: test_[2 1 0--1 2 0]
  'BZOVRFQ'
# ---
# name: test_[2 1 0--1 2 1]
  'ODGQXQL'
# ---
# name: test_[2 1 0--1 2 2]
  'MUOUKOO'
# ---
# name: test_[2 1 0--2 0 0]
  'KPQQIUL'
# ---
# name: test_[2 1 0--2 0 1]
  'QUPUBZJ'
# ---
# name: test_[2 1 0--2 0 2]
  'CHYGHUM'
# ---
# name: test_[2 1 0--2 1 0]
  'QMCJYQV'
# ---
# name: test_[2 1 0--2 1 1]
  'YDJRXLQ'
# ---
# name: test_[2 1 0--2 1 2]
  'MFCMYJF'
# ---
# name: test_[2 1 0--2 2 0]
  'ZOVRFBI'
# ---
# name: test_[2 1 0--2 2 1]
  'DGQXQGT'
# ---
# name: test_[2 1 0--2 2 2]
  'UOUKOSX'
# ---
# name: test_[2 1 0-AI JK-0 0 0]
  'IWUOYLJ'
# ---
# name: test_[2 1 0-AI JK-0 0 1]
  'LIJFGPO'
# ---
# name: test_[2 1 0-AI JK-0 0 2]
  'WNBCWBI'
# ---
# name: test_[2 1 0-AI JK-0 1 0]
  'UVZJNGF'
# ---
# name: test_[2 1 0-AI JK-0 1 1]
  'MJSGEZY'
# ---
# name: test_[2 1 0-AI JK-0 1 2]
  'DYKHPJK'
# ---
# name: test_[2 1 0-AI JK-0 2 0]
  'HSSDOVU'
# ---
# name: test_[2 1 0-AI JK-0 2 1]
  'RCRSVCB'
# ---
# name: test_[2 1 0-AI JK-0 2 2]
  'TRJXGWV'
# ---
# name: test_[2 1 0-AI JK-1 0 0]
  'WUOYLIZ'
# ---
# name: test_[2 1 0-AI JK-1 0 1]
  'IJFGPPO'
# ---
# name: test_[2 1 0-AI JK-1 0 2]
  'NBCWBDC'
# ---
# name: test_[2 1 0-AI JK-1 1 0]
  'VZJNGZY'
# ---
# name: test_[2 1 0-AI JK-1 1 1]
  'JSGEZTS'
# ---
# name: test_[2 1 0-AI JK-1 1 2]
  'YKHPJWV'
# ---
# name: test_[2 1 0-AI JK-1 2 0]
  'SSDOVRQ'
# ---
# name: test_[2 1 0-AI JK-1 2 1]
  'CRSVCML'
# ---
# name: test_[2 1 0-AI JK-1 2 2]
  'RJXGWPO'
# ---
# name: test_[2 1 0-AI JK-2 0 0]
  'UOYLIML'
# ---
# name: test_[2 1 0-AI JK-2 0 1]
  'JFGPPJK'
# ---
# name: test_[2 1 0-AI JK-2 0 2]
  'BCWBDNM'
# ---
# name: test_[2 1 0-AI JK-2 1 0]
  'ZJNGZWV'
# ---
# name: test_[2 1 0-AI JK-2 1 1]
  'SGEZTRQ'
# ---
# name: test_[2 1 0-AI JK-2 1 2]
  'KHPJWGF'
# ---
# name: test_[2 1 0-AI JK-2 2 0]
  'SDOVRKA'
# ---
# name: test_[2 1 0-AI JK-2 2 1]
  'RSVCMUT'
# ---
# name: test_[2 1 0-AI JK-2 2 2]
  'JXGWPYX'
# ---
# name: test_[2 1 0-AI PU BM-0 0 0]
  'IWPOYLK'
# ---
# name: test_[2 1 0-AI PU BM-0 0 1]
  'LIKFGUO'
# ---
# name: test_[2 1 0-AI PU BM-0 0 2]
  'WNMCWMI'
# ---
# name: test_[2 1 0-AI PU BM-0 1 0]
  'PVZKNGF'
# ---
# name: test_[2 1 0-AI PU BM-0 1 1]
  'BKSGEZY'
# ---
# name: test_[2 1 0-AI PU BM-0 1 2]
  'DYJHUKJ'
# ---
# name: test_[2 1 0-AI PU BM-0 2 0]
  'HSSDOVP'
# ---
# name: test_[2 1 0-AI PU BM-0 2 1]
  'RCRSVCM'
# ---
# name: test_[2 1 0-AI PU BM-0 2 2]
  'TRKXGWV'
# ---
# name: test_[2 1 0-AI PU BM-1 0 0]
  'WPOYLIZ'
# ---
# name: test_[2 1 0-AI PU BM-1 0 1]
  'IKFGUUO'
# ---
# name: test_[2 1 0-AI PU BM-1 0 2]
  'NMCWMDC'
# ---
# name: test_[2 1 0-AI PU BM-1 1 0]
  'VZKNGZY'
# ---
# name: test_[2 1 0-AI PU BM-1 1 1]
  'KSGEZTS'
# ---
# name: test_[2 1 0-AI PU BM-1 1 2]
  'YJHUKWV'
# ---
# name: test_[2 1 0-AI PU BM-1 2 0]
  'SSDOVRQ'
# ---
# name: test_[2 1 0-AI PU BM-1 2 1]
  'CRSVCBL'
# ---
# name: test_[2 1 0-AI PU BM-1 2 2]
  'RKXGWUO'
# ---
# name: test_[2 1 0-AI PU BM-2 0 0]
  'POYLIBL'
# ---
# name: test_[2 1 0-AI PU BM-2 0 1]
  'KFGUUKJ'
# ---
# name: test_[2 1 0-AI PU BM-2 0 2]
  'MCWMDNB'
# ---
# name: test_[2 1 0-AI PU BM-2 1 0]
  'ZKNGZWV'
# ---
# name: test_[2 1 0-AI PU BM-2 1 1]
  'SGEZTRQ'
# ---
# name: test_[2 1 0-AI PU BM-2 1 2]
  'JHUKWGF'
# ---
# name: test_[2 1 0-AI PU BM-2 2 0]
  'SDOVRJA'
# ---
# name: test_[2 1 0-AI PU BM-2 2 1]
  'RSVCBPT'
# ---
# name: test_[2 1 0-AI PU BM-2 2 2]
  'KXGWUYX'
# ---
# name: test_[2 1 0-AI-0 0 0]
  'IWUOYLK'
# ---
# name: test_[2 1 0-AI-0 0 1]
  'LIKFGPO'
# ---
# name: test_[2 1 0-AI-0 0 2]
  'WNBCWBI'
# ---
# name: test_[2 1 0-AI-0 1 0]
  'UVZKNGF'
# ---
# name: test_[2 1 0-AI-0 1 1]
  'MKSGEZY'
# ---
# name: test_[2 1 0-AI-0 1 2]
  'DYJHPKJ'
# ---
# name: test_[2 1 0-AI-0 2 0]
  'HSSDOVU'
# ---
# name: test_[2 1 0-AI-0 2 1]
  'RCRSVCB'
# ---
# name: test_[2 1 0-AI-0 2 2]
  'TRKXGWV'
# ---
# name: test_[2 1 0-AI-1 0 0]
  'WUOYLIZ'
# ---
# name: test_[2 1 0-AI-1 0 1]
  'IKFGPPO'
# ---
# name: test_[2 1 0-AI-1 0 2]
  'NBCWBDC'
# ---
# name: test_[2 1 0-AI-1 1 0]
  'VZKNGZY'
# ---
# name: test_[2 1 0-AI-1 1 1]
  'KSGEZTS'
# ---
# name: test_[2 1 0-AI-1 1 2]
  'YJHPKWV'
# ---
# name: test_[2 1 0-AI-1 2 0]
  'SSDOVRQ'
# ---
# name: test_[2 1 0-AI-1 2 1]
  'CRSVCML'
# ---
# name: test_[2 1 0-AI-1 2 2]
  'RKXGWPO'
# ---
# name: test_[2 1 0-AI-2 0 0]
  'UOYLIML'
# ---
# name: test_[2 1 0-AI-2 0 1]
  'KFGPPKJ'
# ---
# name: test_[2 1 0-AI-2 0 2]
  'BCWBDNM'
# ---
# name: test_[2 1 0-AI-2 1 0]
  'ZKNGZWV'
# ---
# name: test_[2 1 0-AI-2 1 1]
  'SGEZTRQ'
# ---
# name: test_[2 1 0-AI-2 1 2]
  'JHPKWGF'
# ---
# name: test_[2 1 0-AI-2 2 0]
  'SDOVRJA'
# ---
# name: test_[2 1 0-AI-2 2 1]
  'RSVCMUT'
# ---
# name: test_[2 1 0-AI-2 2 2]
  'KXGWPYX'
# ---
# name: test_[2 1 0-JK-0 0 0]
  'IGJPQQJ'
# ---
# name: test_[2 1 0-JK-0 0 1]
  'WIQUPUO'
# ---
# name: test_[2 1 0-JK-0 0 2]
  'MGCHYGA'
# ---
# name: test_[2 1 0-JK-0 1 0]
  'ZKQMCKF'
# ---
# name: test_[2 1 0-JK-0 1 1]
  'CPYDKRY'
# ---
# name: test_[2 1 0-JK-0 1 2]
  'SUMFCMK'
# ---
# name: test_[2 1 0-JK-0 2 0]
  'NBZOVRU'
# ---
# name: test_[2 1 0-JK-0 2 1]
  'QODGQXB'
# ---
# name: test_[2 1 0-JK-0 2 2]
  'LMUOUJV'
# ---
# name: test_[2 1 0-JK-1 0 0]
  'GJPQQIZ'
# ---
# name: test_[2 1 0-JK-1 0 1]
  'IQUPUBO'
# ---
# name: test_[2 1 0-JK-1 0 2]
  'GCHYGHC'
# ---
# name: test_[2 1 0-JK-1 1 0]
  'KQMCKYY'
# ---
# name: test_[2 1 0-JK-1 1 1]
  'PYDKRXS'
# ---
# name: test_[2 1 0-JK-1 1 2]
  'UMFCMYV'
# ---
# name: test_[2 1 0-JK-1 2 0]
  'BZOVRFQ'
# ---
# name: test_[2 1 0-JK-1 2 1]
  'ODGQXQL'
# ---
# name: test_[2 1 0-JK-1 2 2]
  'MUOUJOO'
# ---
# name: test_[2 1 0-JK-2 0 0]
  'JPQQIUL'
# ---
# name: test_[2 1 0-JK-2 0 1]
  'QUPUBZK'
# ---
# name: test_[2 1 0-JK-2 0 2]
  'CHYGHUM'
# ---
# name: test_[2 1 0-JK-2 1 0]
  'QMCKYQV'
# ---
# name: test_[2 1 0-JK-2 1 1]
  'YDKRXLQ'
# ---
# name: test_[2 1 0-JK-2 1 2]
  'MFCMYKF'
# ---
# name: test_[2 1 0-JK-2 2 0]
  'ZOVRFBI'
# ---
# name: test_[2 1 0-JK-2 2 1]
  'DGQXQGT'
# ---
# name: test_[2 1 0-JK-2 2 2]
  'UOUJOSX'
# ---
